--- a/android/stereo-video-udp/AndroidManifest.xml
+++ b/android/stereo-video-udp/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.freedesktop.gstreamer.tutorials.tutorial_5"
+    package="org.freedesktop.gstreamer.examples.stereo_video_viewer_udp"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -17,7 +17,7 @@
         android:icon="@drawable/gstreamer_logo_5"
         android:label="@string/app_name" >
         <activity
-            android:name=".Tutorial5"
+            android:name=".StereoVideoViewerUDP"
             android:label="@string/app_name" >
 
             <intent-filter>
