--- a/android/stereo-video-udp/build.gradle
+++ b/android/stereo-video-udp/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "org.freedesktop.gstreamer.tutorials.tutorial_5"
+        applicationId "org.freedesktop.gstreamer.examples.stereo_video_viewer_udp"
         minSdkVersion 15
         targetSdkVersion 15
         versionCode 1
@@ -26,7 +26,7 @@ android {
 
                 arguments "NDK_APPLICATION_MK=jni/Application.mk", "GSTREAMER_JAVA_SRC_DIR=src", "GSTREAMER_ROOT_ANDROID=$gstRoot", "GSTREAMER_ASSETS_DIR=src/assets"
 
-                targets "tutorial-5"
+                targets "stereo-video-viewer-udp"
 
                 // All archs except MIPS and MIPS64 are supported
                 abiFilters  'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
