--- a/android/stereo-video-udp/AndroidManifest.xml
+++ b/android/stereo-video-udp/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:label="@string/app_name" >
         <activity
             android:name=".StereoVideoViewerUDP"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
