update: update android-tutorial-5/.gitignore
Signed-off-by: Jaeyoung Lee <jylee0121@gmail.com>

--- a/android/android-tutorial-5/.gitignore
+++ b/android/android-tutorial-5/.gitignore
@@ -1,4 +1,5 @@
 .externalNativeBuild/
 assets/
 gst-build-*/
-src/org/
+src/org/freedesktop/gstreamer/GStreamer.java
+src/org/freedesktop/gstreamer/androidmedia/
