--- a/android/stereo-video-udp/AndroidManifest.xml
+++ b/android/stereo-video-udp/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-feature android:glEsVersion="0x00020000" />
 
     <application
-        android:icon="@drawable/gstreamer_logo_5"
+        android:icon="@drawable/logo"
         android:label="@string/app_name" >
         <activity
             android:name=".StereoVideoViewerUDP"
